tests/ui/data_enums.stderr
error: enums with data are not supported yet
 --> tests/ui/data_enums.rs:4:9
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
4 |         Field(u64),
  |         ^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
